fix dropdown elements being partially shown on ios.

--- a/src/picker/picker.scss
+++ b/src/picker/picker.scss
@@ -12,4 +12,5 @@
 
 dope-drop-down > * {
   --height: var(--dropdown-height);
+  transform: translateZ(0);
 }
